--- a/view/product.html
+++ b/view/product.html
@@ -28,6 +28,7 @@
         }
         dir-pagination-controls>ul{
             align-items: center;
+            
         }
         dir-pagination-controls>ul>li{
             padding: 10px;
@@ -36,9 +37,7 @@
         dir-pagination-controls>ul>li>a{
             text-decoration: none;
             font-size: 18px;
-        }
-       
-        dir-pagination-controls>ul>li:first-child>a, dir-pagination-controls>ul>li:last-child>a{
+            color: black;
             font-weight: bold;
         }
     </style>
