--- a/view/product_detail_view/01.html
+++ b/view/product_detail_view/01.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="../../home/css/responsive.css">
     <link rel="stylesheet" href="../../product_detail/css/style.css">
     <link rel="stylesheet" href="../../product_detail/css/responsive.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('8cxTMhX5LX3zgdGRx');
+        })();
+    </script>
 </head>
 <body ng-app="myApp" ng-controller="myController">
     <div>
@@ -30,13 +36,10 @@
                                 <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link" href="#">Products</a>
+                                <a class="nav-link" href="../product.html">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
@@ -231,11 +234,11 @@
                     <i class="fa-sharp fa-solid fa-xmark"></i>
                 </div>
                 <h2 class="heading">Call request</h2>
-                <form action="">
-                <input type="text" class="call-ret-input" placeholder="Name" required>
-                <input type="email" class="call-ret-input" placeholder="Email" required>
-                <input type="phone" class="call-ret-input" placeholder="Phone" required><br>
-                <button class="call-ret-btn">SEND</button>
+                <form ng-submit="senEmail()">
+                <input ng-model="myName" type="text" class="call-ret-input" placeholder="Name" required>
+                <input ng-model="myEmail" type="email" class="call-ret-input" placeholder="Email" required>
+                <input ng-model="myPhone" type="phone" class="call-ret-input" placeholder="Phone" required><br>
+                <input class="call-ret-btn" type="submit" value="SEND">
                 </form>
                 <p class="call-ret-desc">By clicking "Send" you confirm that you have read and agree with our
                                         Privacy Policy and give consent to process personal data</p>
